@@ -32,14 +32,14 @@ virtual void setVisible(const QString& widgetName, bool enable) = 0;
 
 /** Set the current text/value of the widget. Works for:
       QLabel
-      QButton: sets button title
-      QGroupBox: changes the group title
-      QLineEdit: changes the lineedit text
-      QTextEdit: changes the content of the edit widget
-      QSpinBox: changes the value of the spinbox.
+      Button: sets button title
+      GroupBox: changes the group title
+      LineEdit: changes the lineedit text
+      TextEdit: changes the content of the edit widget
+      SpinBoxInt: changes the value of the spinbox.
       FileSelector: changes value of current file  
-      QListBox:  sets content of list (items are EOL-separated)
-      QComboBox: sets content of combo (items are EOL-separated) */
+      ListBox:  sets content of list (items are EOL-separated)
+      ComboBox: sets content of combo (items are EOL-separated) */
 virtual void changeWidgetText(const QString& widgetName, const QString& text) = 0;
 
 /** Returns the current text/value of the widget. Works for all Kommander widgets - implemented in widget */
@@ -53,61 +53,66 @@ virtual QString selection(const QString& widgetName) = 0;
 
 
 /** Returns current item or -1 if there is no item selected. Works for:
-      QListBox
-      QComboBox  */  
+      ListBox
+      ComboBox  */  
 virtual int currentItem(const QString &widgetName) = 0;  
   
 /** Returns text of given item. Works for:
-      QListBox
-      QComboBox  */  
+      ListBox
+      ComboBox  */  
 virtual QString item(const QString &widgetName, int index) = 0;  
 
 
 /** Removes the item at position index. Works for:
-      QListBox  
-      QComboBox  */            
+      ListBox  
+      ComboBox  */            
 virtual void removeListItem(const QString &widgetName, int index) = 0;
 
 /** Inserts a text item with text item, at position index. The item will be appended
     if index is negative. Works for:
-      QListBox
-      QComboBox  */        
+      ListBox
+      ComboBox  */        
 virtual void addListItem(const QString &widgetName, const QString &item, int index) = 0;
+
+/** Inserts a pixmap for given item. Works for:
+      ListBox
+      TreeView  */        
+virtual void setPixmap(const QString &widgetName, const QString &iconName, int index) = 0;
 
 /** Inserts the list of strings at position index. The items will be appended if index
     is negative. Works for:
-      QListBox
-      QComboBox  */        
+      ListBox
+      ComboBox  */        
 virtual void addListItems(const QString &widgetName, const QStringList &items, int index) = 0;
 
 /** Inserts a text item with text item if it is not present now. Works for:
-      QListBox */        
+      ListBox */        
 virtual void addUniqueItem(const QString &widgetName, const QString &item) = 0;
 
 /** Returns index of item with text 'item' or -1. Search is done in following order:
  1. exact, 2. begins with 3. contains. Works for:
-      QListBox */        
+      ListBox */        
 virtual int findItem(const QString &widgetName, const QString &item) = 0;
 
 /** Remove all items from the list. Works for:  
-      QListBox
-      QComboBox */        
+      ListBox
+      ComboBox */        
 virtual void clearList(const QString &widgetName) = 0;
 
 /** Sets the cuurent item to the item with name if exists. Otherwise doesn't do
 anything. Works for:  
-      QListBox
-      QComboBox
+      ListBox
+      ComboBox
 */        
 virtual void setCurrentListItem(const QString& widgetName, const QString &name) = 0;
 
 /** Sets the current tab to the index position. Works for:
-      QTabWidget  */        
+      TabWidget  */        
 virtual void setCurrentTab(const QString &widgetName, int index) = 0;
 
 /** Checks/unchecks the widget. Works for:
-      QCheckBox
-      QRadioButton  */         
+      CheckBox
+      RadioButton  */         
 virtual void setChecked(const QString &widgetName, bool checked) = 0;
 
 /** Sets the associated text of the widget. Works for all Kommander widgets. */  
